# azure-url-shortener

./: .gitignore  README.md
.github/workflows/: analytics-processing-service.yml  analytics-query-service.yml  auth-service.yml  db-migration.yml  deploy-analytics-query-service.yml  deploy-redirect-service.yml  deploy-to-azure.yml  frontend.yml  link-management-service.yml  redirect-service.yml
bicep/: core.bicep  main.bicep
docs/: api.yml  architecture.md
kubernetes/analytics-processing-service/: deployment.yaml
kubernetes/analytics-query-service/: deployment.yaml  service.yaml
kubernetes/auth-service/: deployment.yaml  service.yaml
kubernetes/frontend/: configmap.yaml  deployment.yaml  pvc.yaml  service.yaml
kubernetes/link-management-service/: deployment.yaml  service.yaml
local-dep/kubernetes/deploy/: link-mgmt-deployment.yml  mssql-deployment.yml  rabbitmq-deployment.yml  redirect-service.yml  redis-deployment.yml
local-dep/kubernetes/secret/: mssql-secret.yml  rabbitmq-secret.yml
local-dep/services/link-management-service/: Dockerfile  app.py  init.sql  requirements.txt
presentations/preliminary-presentation/: preliminary.typ
services/analytics-processing-service/: Dockerfile  index.js  package-lock.json  package.json
services/analytics-query-service/: package-lock.json  package.json
services/auth-service/: Dockerfile  go.mod  go.sum  init.sql
services/frontend/: Caddyfile  Dockerfile  README.md  index.html  local-portforward.sh  package-lock.json  package.json  vite.config.js
services/link-management-service/: Dockerfile  go.mod  go.sum  init.sql  package-lock.json  package.json
services/redirect-service/: .funcignore  .gitignore  Cargo.toml  Dockerfile  Makefile  host.json  package.json
services/redirect-service/redirect/: function.json
services/redirect-service/src/: analytics.rs  db.rs  handlers.rs  index.js  main.rs  models.rs
(+30 files in other folders)
