[package]
name = "redirect-service"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tiberius = { version = "0.12", features = ["sql-browser-tokio"] }
tokio-util = { version = "0.7", features = ["compat"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
openssl = { version = "0.10", features = ["vendored"] }
