[package]
name = "redirect-service"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tiberius = { version = "0.12", features = ["sql-browser-tokio"] }
tokio-util = { version = "0.7", features = ["compat"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
openssl = { version = "0.10", features = ["vendored"] }
reqwest = { version = "0.11", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
url = "2.5"
base64 = "0.22"
hmac = "0.12"
sha2 = "0.10"
urlencoding = "2.1"
